--- a/mods/redres/rules/palettes.yaml
+++ b/mods/redres/rules/palettes.yaml
@@ -6,10 +6,14 @@
 		Name: player
 		Tileset: SNOW
 		Filename: unitsno.pal
-		ShadowIndex: 1, 12
+		ShadowIndex: 1
 	PaletteFromFile@playertem:
 		Name: player
 		Tileset: TEMPERATE
+		Filename: unittem.pal
+		ShadowIndex: 1
+	PaletteFromFile@infantry:
+		Name: infantry
 		Filename: unittem.pal
 		ShadowIndex: 1, 12
 	PaletteFromFile@depth:
@@ -33,7 +37,7 @@
 		Name: pips
 		Filename: palette.pal
 		AllowModifiers: false
-		ShadowIndex: 4
+		#ShadowIndex: 4
 	PaletteFromFile@ra:
 		Name: ra
 		Filename: palette.pal
@@ -46,7 +50,7 @@
 		Filename: sidec02.mix:sidebar.pal
 	PaletteFromPaletteWithAlpha@clock:
 		Name: iconclock
-		BasePalette: sidebar
+		BasePalette: chrome
 		Alpha: 0.5
 		AllowModifiers: false
 	PaletteFromFile@colorpicker:
@@ -63,6 +67,12 @@
 		G: 0
 		B: 0
 		A: 140
+	PaletteFromRGBA@no_shadow:
+		Name: no-shadow
+		R: 0
+		G: 0
+		B: 0
+		A: 0
 	PaletteFromRGBA@highlight:
 		Name: highlight
 		R: 255
@@ -74,7 +84,7 @@
 		R: 255
 		G: 255
 		B: 255
-		A: 64
+		A: 128	#64
 	PaletteFromRGBA@disabled:
 		Name: disabled
 		R: 0
@@ -86,7 +96,7 @@
 		R: 196
 		G: 0
 		B: 0
-		A: 120
+		A: 128
 	PaletteFromPaletteWithAlpha@placebuilding:
 		Name: placebuilding
 		BasePalette: ra
@@ -102,17 +112,30 @@
 	VoxelNormalsPalette@normals:
 		Name: normals
 		Type: RedAlert2
+	VoxelNormalsPalette@tsnormals:
+		Name: ts-normals
+		Type: TiberianSun
 	PaletteFromFile@resource:
 		Name: resource
 		Filename: temperat.pal
 		ShadowIndex: 1
-	PlayerColorPalette:
+	PlayerColorPalette@player:
 		BasePalette: player
+		BaseName: player
+		RemapIndex: 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31
+	PlayerColorPalette@infantry:
+		BasePalette: infantry
+		BaseName: infantry
 		RemapIndex: 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31
 	PaletteFromPlayerPaletteWithAlpha@cloak:
 		BaseName: cloak
 		BasePalette: player
 		Alpha: 0.55
+	PaletteFromFile@explosion1:
+		Name: explosion_pal1
+		Filename: eqemp.pal
+	PaletteFromFile@explosion2:
+		Name: explosion_pal2
+		Filename: explpal1.pal
 	PlayerHighlightPalette:
 	MenuPaletteEffect:
-
