--- a/mods/redres/rules/soviet-vehicles.yaml
+++ b/mods/redres/rules/soviet-vehicles.yaml
@@ -1,7 +1,7 @@
 smcv:
 	Inherits: ^Vehicle
 	Inherits@amphibious: ^AmphibiousVehicle
-	Inherits@selfhealing: ^T2SelfHealing
+	Inherits@selfhealing: ^VehSelfHealT2
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 50
@@ -36,6 +36,8 @@ smcv:
 		NoTransformNotification: BuildingCannotPlaceAudio
 	-WithVoxelBody:
 	WithVoxelWaterBody:
+	RenderVoxels:
+		Scale: 13
 	LeavesTrails:
 		Image: wake
 		Palette: effect
@@ -46,7 +48,7 @@ smcv:
 harv:
 	Inherits: ^Vehicle
 	Inherits@amphibious: ^AmphibiousVehicle
-	Inherits@selfhealing: ^T2SelfHealing
+	Inherits@selfhealing: ^VehSelfHealT2
 	Buildable:
 		Queue: Vehicle
 		BuildPaletteOrder: 10
@@ -75,14 +77,14 @@ harv:
 	WithMuzzleOverlay:
 	Armament@primary:
 		Weapon: 20mmRapid
-		LocalOffset: 0,0,384
+		LocalOffset: 512,0,384
 		Muzzle: muzzle
 		UpgradeTypes: eliteweapon
 		UpgradeMaxEnabledLevel: 0
 		UpgradeMaxAcceptedLevel: 1
 	Armament@elite:
 		Weapon: 20mmRapid
-		LocalOffset: 0,0,384
+		LocalOffset: 512,0,384
 		Muzzle: muzzle
 		UpgradeTypes: eliteweapon
 		UpgradeMinEnabledLevel: 1
@@ -91,7 +93,7 @@ harv:
 	AutoTarget:
 	Turreted:
 		ROT: 10
-		Offset: 0,0,650
+		Offset: 132,0,750
 	Mobile:
 		Speed: 50
 		ROT: 6
@@ -108,3 +110,77 @@ harv:
 		TerrainTypes: Water
 	Voiced:
 		VoiceSet: WarMinerVoice
+
+scorcher:
+	Inherits: ^Vehicle
+	Buildable:
+		Queue: Vehicle
+		BuildPaletteOrder: 20
+		Prerequisites: ~naweap
+	Valued:
+		Cost: 600
+	Tooltip:
+		Name: Scorcher
+		Description: Anti-infantry multi purpose vehicle.
+	Health:
+		HP: 550
+	Armor:
+		Type: Light
+	Mobile:
+		Crushes: crate
+		Speed: 120
+		ROT: 6
+	RevealsShroud:
+		Range: 8c0
+	Cargo:
+		Types: Garrisonable, Infantry
+		MaxWeight: 1
+		PipCount: 1
+		UnloadVoice: Select
+	Armament@none:
+		Weapon: ScorcherFlamer
+		LocalOffset: 252,0,768
+		UpgradeTypes: ifv-machinegun, ifv-advmissiles, ifv-engineer, ifv-grenades, ifv-sniper, ifv-chrono, ifv-flak, ifv-demo, ifv-tesla, ifv-psicorps, ifv-deso, ifv-hero
+		UpgradeMaxEnabledLevel: 0
+	Armament@rockets:
+		Weapon: ScorcherRocket
+		LocalOffset: 252,-64,852
+		UpgradeTypes: ifv-machinegun, ifv-advmissiles, ifv-grenades, ifv-sniper, ifv-chrono, ifv-flak, ifv-demo, ifv-tesla, ifv-psicorps, ifv-deso, ifv-hero
+		UpgradeMinEnabledLevel: 1
+	Armament@rockets_2:
+		Weapon: ScorcherRocket
+		LocalOffset: 252,64,852
+		FireDelay: 5
+		UpgradeTypes: ifv-machinegun, ifv-advmissiles, ifv-grenades, ifv-sniper, ifv-chrono, ifv-flak, ifv-demo, ifv-tesla, ifv-psicorps, ifv-deso, ifv-hero
+		UpgradeMinEnabledLevel: 1
+	Armament@repair:
+		Weapon: IFVRepair
+		LocalOffset: 164,0,864
+		UpgradeTypes: ifv-engineer
+		Cursor: goldwrench
+		OutsideRangeCursor: goldwrench
+		TargetStances: Ally
+		ForceTargetStances: None
+		UpgradeMinEnabledLevel: 1
+	AutoTarget:
+	Turreted:
+		ROT: 6
+		Offset: -64,0,0
+	AttackTurreted:
+		Voice: Attack
+	WithVoxelTurret@none:
+		Sequence: turret
+		UpgradeTypes: ifv-machinegun, ifv-advmissiles, ifv-engineer, ifv-grenades, ifv-sniper, ifv-chrono, ifv-flak, ifv-demo, ifv-tesla, ifv-psicorps, ifv-deso, ifv-hero
+		UpgradeMaxEnabledLevel: 0
+	WithVoxelTurret@advmissiles:
+		Sequence: turret-rockets
+		UpgradeTypes: ifv-machinegun, ifv-advmissiles, ifv-grenades, ifv-sniper, ifv-chrono, ifv-flak, ifv-demo, ifv-tesla, ifv-psicorps, ifv-deso, ifv-hero
+		UpgradeMinEnabledLevel: 1
+	WithVoxelTurret@engineer:
+		Sequence: turret-engi
+		UpgradeTypes: ifv-engineer
+		UpgradeMinEnabledLevel: 1
+	RenderVoxels:
+		Scale: 10
+	Voiced:
+		VoiceSet: IFVVoice
